lab3: with mongo without docker
