# domain-service/docs/swagger.json
@@ -8,9 +8,9 @@
     },
     "basePath": "/api",
     "paths": {
-        "/person/CreateUser": {
+        "/domain/CreateCompanion": {
             "post": {
-                "description": "создание пользователя. Если пользователь с таким username уже существует, то будет выдана ошибка",
+                "description": "создание попутчика. У пользователя не получится создать несколько сущностей попутчиков",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,17 +18,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "client_service"
+                    "domain_service"
                 ],
-                "operationId": "client_service_create_user",
+                "operationId": "domain_service_create_companion",
                 "parameters": [
                     {
-                        "description": "Данные для создания пользователя. Поля username и password не могут быть пустыми.",
+                        "description": "Параметры, по которым создаем информацию",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.CreateUserPayload"
+                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.CreateCompanionRequestPayload"
                         }
                     }
                 ],
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Person"
+                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Companion"
                         }
                     },
                     "default": {
@@ -48,9 +48,49 @@
                 }
             }
         },
-        "/person/DeleteUserByID": {
+        "/domain/CreateRoute": {
+            "post": {
+                "description": "создание маршрута. Водителю не получится создать несколько маршрутов. Сущность маршрутов будет одна, но в нее можно будет поместить несколько пунктов назначения.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "domain_service"
+                ],
+                "operationId": "domain_service_create_route",
+                "parameters": [
+                    {
+                        "description": "Параметры, по которым создаем информацию",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.CreateRouteRequestPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Route"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_pkg_custom_errors.ErrCodes"
+                        }
+                    }
+                }
+            }
+        },
+        "/domain/DeleteCompanion": {
             "delete": {
-                "description": "удаление пользователя пользователя",
+                "description": "Удаление сущности попутчика у пользователя.",
                 "consumes": [
                     "application/json"
                 ],
@@ -58,23 +98,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "client_service"
+                    "domain_service"
                 ],
-                "operationId": "client_service_delete_user",
+                "operationId": "domain_service_delete_companion",
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "id",
+                        "name": "client_id",
                         "in": "query"
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Person"
-                        }
-                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -84,9 +118,9 @@
                 }
             }
         },
-        "/person/GetClientByID": {
-            "get": {
-                "description": "получение пользователя по его id",
+        "/domain/DeleteRoute": {
+            "delete": {
+                "description": "Удаление сущности маршрута у пользователя.",
                 "consumes": [
                     "application/json"
                 ],
@@ -94,23 +128,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "client_service"
+                    "domain_service"
                 ],
-                "operationId": "client_service_get_client_by_ID",
+                "operationId": "domain_service_delete_route",
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "id",
+                        "name": "client_id",
                         "in": "query"
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Person"
-                        }
-                    },
                     "default": {
                         "description": "",
                         "schema": {
@@ -120,9 +148,9 @@
                 }
             }
         },
-        "/person/SearchUserByUserName": {
+        "/domain/GetCompanionInfo": {
             "get": {
-                "description": "удаление пользователя пользователя",
+                "description": "получение попутчика по фильтрам.",
                 "consumes": [
                     "application/json"
                 ],
@@ -130,13 +158,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "client_service"
+                    "domain_service"
                 ],
-                "operationId": "client_service_swarch_user_by_user_name",
+                "operationId": "domain_service_get_companion_info",
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "user_name_in",
+                        "name": "client_id",
                         "in": "query"
                     }
                 ],
@@ -146,7 +174,46 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Person"
+                                "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Companion"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_pkg_custom_errors.ErrCodes"
+                        }
+                    }
+                }
+            }
+        },
+        "/domain/GetRouteInfo": {
+            "get": {
+                "description": "получение маршрута по фильрам.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "domain_service"
+                ],
+                "operationId": "domain_service_get_route_info",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "client_id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Route"
                             }
                         }
                     },
@@ -161,30 +228,34 @@
         }
     },
     "definitions": {
-        "github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.CreateUserPayload": {
+        "github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Companion": {
             "type": "object",
             "properties": {
-                "is_driver": {
-                    "type": "boolean"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "user_name": {
+                "client_id": {
                     "type": "string"
                 }
             }
         },
-        "github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Person": {
+        "github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.CreateCompanionRequestPayload": {
             "type": "object",
             "properties": {
-                "driver": {
-                    "type": "boolean"
-                },
-                "id": {
+                "client_id": {
                     "type": "string"
-                },
-                "user_name": {
+                }
+            }
+        },
+        "github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.CreateRouteRequestPayload": {
+            "type": "object",
+            "properties": {
+                "client_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_whitewolf185_SystemArchitecture_domain-service_api_domain.Route": {
+            "type": "object",
+            "properties": {
+                "client_id": {
                     "type": "string"
                 }
             }
