# domain-service/internal/app/delete_route.go
@@ -2,8 +2,11 @@ package app
 
 import (
 	"context"
+	"errors"
+	"fmt"
 
 	"github.com/whitewolf185/SystemArchitecture/domain-service/api/domain"
+	customerrors "github.com/whitewolf185/SystemArchitecture/domain-service/pkg/custom_errors"
 )
 
 // @Tags domain_service
@@ -13,7 +16,20 @@ import (
 // @Produce json
 // @Param input query domain.DeleteRouteRequest true "Параметры, по которым удаляем информацию"
 // @Failure default  {object}  customerrors.ErrCodes
-// @Router /person/DeleteRoute [delete]
+// @Router /domain/DeleteRoute [delete]
 func (i Implementation) DeleteRoute(ctx context.Context, req *domain.DeleteRouteRequest) error {
-	panic("not implemented")
+	if req == nil {
+		return customerrors.CodesBadRequest(fmt.Errorf("request cannot be empty"))
+	}
+	err := i.repo.DeleteRoute(ctx, req.ClientID)
+	if err != nil {
+		switch {
+		case errors.Is(err, customerrors.ErrNotFound):
+			return customerrors.CodesNotFound(err)
+		}
+
+		return err
+	}
+
+	return nil
 }
